--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-MODS= #example 923265825610,923087880256 (optional)
-MONGO_URI= #Your mongodb url (optional) if you dont have privacy issue
-PREFIX=  #your custom prefix (optional)
-SESSION_ID= #should be unique and dont forget (required)
-MAL_USERNAME= #mal password (optional)
-MAL_PASSWORD= #mal password (optional)
-PACKNAME= #sticker packname (optional)
-NAME= #YOUR_BOT_NAME
+MODS= #263788671478
+MONGO_URI= #mongodb+srv://Aku:aku@stress.gnomupc.mongodb.net/?retryWrites=true&w=majority
+PREFIX=  #.
+SESSION_ID= #welldone
+MAL_USERNAME= #deeyl
+MAL_PASSWORD= #sherr
+PACKNAME= #Stress_Giver
+NAME= #Archer
