--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
   },
   "scripts": {
     "start": "nodemon heart.js",
-    "heroku-prebuild": "yarn install",
+    "heroku-prebuild": "npm install",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Aku",
